--- a/.hintrc
+++ b/.hintrc
@@ -28,6 +28,12 @@
       {
         "document-title": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   },
   "browserslist": [
